[tool.poetry]
name = "igo-backend"
version = "0.1.0"
description = "game server for browser-based igo application"
authors = ["Randy West <randywest55@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.7.0"
asyncinit = "^0.2.4"
asyncpg = "^0.23.0"
tornado = "^6.1"
dataclassy = "^0.10.3"
uvloop = "^0.15.2"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
coverage = "^5.5"
"testing.postgresql" = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
